[package]
name = "Advent of Code 2016"
version = "0.1.0"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Solutions to the Advent of Code 2016 puzzles"

[dependencies]
itertools = "0.5"
md5 = "0.3"
nom = "2"
time = "0.1"
onig = "1"

[[bin]]
name = "day01"

[[bin]]
name = "day02"

[[bin]]
name = "day03"

[[bin]]
name = "day04"

[[bin]]
name = "day05"

[[bin]]
name = "day06"

[[bin]]
name = "day07"

[[bin]]
name = "day08"

[[bin]]
name = "day09"

[[bin]]
name = "day10"

[[bin]]
name = "day11"

[[bin]]
name = "day12"

[[bin]]
name = "day13"

[[bin]]
name = "day14"

[[bin]]
name = "day15"

[[bin]]
name = "day16"
